# Morphy

./: .gitignore  CMakeLists.txt
include/: board.h  board2.h  uci.h
include/morphy/: board.h  engine.h  fen.h  uci.h
source/: board.cc  engine.cc  main.cc  uci.cc
src/: board.cc  engine.cc  fen.cc  main.cc  uci.cc
